apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/DocEngine_Template__c.object-meta.xml
<CustomObject>
    <description>DocEngine template bound to a Salesforce object type. Many templates per Source Object.</description>
    <label>DocEngine Template</label>
    <nameField>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocEngine Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>