apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Access_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Group_Id__c</fullName>
    <description>Public Group Id (Group.Type = Regular) allowed to use this template. Blank = any user with template access. Not a Lookup — Salesforce does not support Lookup to Group; the builder uses a group picker that stores this Id.</description>
    <label>Access Public Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>