apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Latest published template version used for new fills. Builder Save always creates a new version and points here.</description>
    <label>Current Version</label>
    <referenceTo>DocEngine_Template_Version__c</referenceTo>
    <relationshipLabel>Current For Templates</relationshipLabel>
    <relationshipName>Current_For_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>