apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin note for this template.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>