apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active templates appear in the fill-mode picker.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>