apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Salesforce object API name this template applies to (e.g. Account, Opportunity, My_Obj__c).</description>
    <externalId>true</externalId>
    <label>Source Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>