apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/PDF_Filename__c.field-meta.xml
<CustomField>
    <fullName>PDF_Filename__c</fullName>
    <description>Default filename for generated PDF (e.g. Agreement.pdf).</description>
    <label>PDF Filename</label>
    <length>120</length>
    <type>Text</type>
</CustomField>