apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Template_JSON__c.field-meta.xml
<CustomField>
    <fullName>Template_JSON__c</fullName>
    <description>exportTemplate() JSON payload from DocEngine (includes embedded fieldMapping when configured).</description>
    <label>Template JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>