apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Counter for the current / latest template version. Immutable history lives on DocEngine_Template_Version__c.</description>
    <label>Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>