apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/listViews/Active_Templates.listView-meta.xml
<ListView>
    <fullName>Active_Templates</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Version__c</columns>
    <columns>LAST_UPDATE</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Templates</label>
</ListView>