apps/salesforce/force-app/main/default/objects/DocEngine_Template__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Version__c</columns>
    <columns>PDF_Filename__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Templates</label>
</ListView>